<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>de.agrirouter.middleware</groupId>
    <artifactId>agrirouter-middleware</artifactId>
    <version>6.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>agrirouter-middleware-application</module>
        <module>agrirouter-middleware-controller</module>
        <module>agrirouter-middleware-persistence</module>
        <module>agrirouter-middleware-domain</module>
        <module>agrirouter-middleware-integration</module>
        <module>agrirouter-middleware-api</module>
        <module>agrirouter-middleware-business</module>
        <module>agrirouter-middleware-efdi</module>
        <module>agrirouter-middleware-persistence-search</module>
        <module>agrirouter-middleware-isoxml</module>
    </modules>

    <properties>
        <project.build.finalName>agrirouter-middleware</project.build.finalName>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
        <project.encoding>UTF-8</project.encoding>
    </properties>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
        <repository>
            <id>dke-data</id>
            <name>GitHub DKE-Data Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/DKE-Data/*</url>
        </repository>
        <repository>
            <id>saschadoemer</id>
            <name>GitHub Sascha Doemer Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/saschadoemer/*</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <!-- INTERNAL -->
            <dependency>
                <groupId>de.agrirouter.middleware</groupId>
                <artifactId>agrirouter-middleware-controller</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.agrirouter.middleware</groupId>
                <artifactId>agrirouter-middleware-persistence</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.agrirouter.middleware</groupId>
                <artifactId>agrirouter-middleware-persistence-search</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.agrirouter.middleware</groupId>
                <artifactId>agrirouter-middleware-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.agrirouter.middleware</groupId>
                <artifactId>agrirouter-middleware-integration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.agrirouter.middleware</groupId>
                <artifactId>agrirouter-middleware-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.agrirouter.middleware</groupId>
                <artifactId>agrirouter-middleware-business</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.agrirouter.middleware</groupId>
                <artifactId>agrirouter-middleware-efdi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.agrirouter.middleware</groupId>
                <artifactId>agrirouter-middleware-isoxml</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- SWAGGER / OPENAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>1.6.14</version>
            </dependency>

            <!-- MARIA DB -->
            <dependency>
                <groupId>org.mariadb.jdbc</groupId>
                <artifactId>mariadb-java-client</artifactId>
                <version>3.0.7</version>
            </dependency>

            <!-- HIKARI -->
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>5.0.1</version>
            </dependency>

            <!-- AGRIROUTER -->
            <dependency>
                <groupId>com.agrirouter.api</groupId>
                <artifactId>agrirouter-sdk-java-api</artifactId>
                <version>2.2.0</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-nop</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.agrirouter.api</groupId>
                <artifactId>agrirouter-sdk-java-impl</artifactId>
                <version>2.2.0</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-nop</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.agrirouter.api</groupId>
                <artifactId>agrirouter-sdk-java-convenience</artifactId>
                <version>2.2.0</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-nop</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.agrirouter.proto</groupId>
                <artifactId>agrirouter-api-protobuf-definitions</artifactId>
                <version>1.1.1</version>
            </dependency>

            <!-- QUERY DSL -->
            <dependency>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-apt</artifactId>
                <version>5.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-jpa</artifactId>
                <version>5.0.0</version>
            </dependency>

            <!-- PROTOBUF -->
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>4.0.0-rc-2</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java-util</artifactId>
                <version>3.15.8</version>
            </dependency>

            <!-- Model Mapper -->
            <dependency>
                <groupId>org.modelmapper</groupId>
                <artifactId>modelmapper</artifactId>
                <version>3.0.0</version>
            </dependency>

            <!-- Client Name Decoders -->
            <dependency>
                <groupId>de.saschadoemer.iso-11783</groupId>
                <artifactId>toolsuite</artifactId>
                <version>2.0</version>
            </dependency>

            <!-- LOG4J -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>2.17.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>2.17.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-to-slf4j</artifactId>
                <version>2.17.1</version>
            </dependency>

            <!-- MATERIAL UI -->
            <dependency>
                <groupId>org.webjars.bower</groupId>
                <artifactId>material-design-lite</artifactId>
                <version>1.3.0</version>
            </dependency>

            <!-- COMMONS -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.12.0</version>
            </dependency>

            <!-- MICROSTREAM -->
            <dependency>
                <groupId>one.microstream</groupId>
                <artifactId>microstream-storage-embedded</artifactId>
                <version>07.01.00-MS-GA</version>
            </dependency>

            <!-- PROMETHEUS -->
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-registry-prometheus</artifactId>
                <version>1.10.6</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>8.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <mainClass>de.agrirouter.middleware.Main</mainClass>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.9.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.encoding}</encoding>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <encoding>${project.encoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>